@@ -95,6 +95,8 @@ Release 0.20.0 - Unreleased
    HBASE-803   Atomic increment operations (Ryan Rawson and Jon Gray via Stack)
    HBASE-1252  Make atomic increment perform a binary increment
                (Jonathan Gray via Stack)
+   HBASE-1258,1259 ganglia metrics for 'requests' is confusing
+               (Ryan Rawson via Stack)
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
